--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,16 @@ body {
 	font-size: 16px;
 }
 
+
 .container-fluid.menu{
 	background: url(../svg/fon.svg) repeat;
 	display:block;
 	height:80px;
 	padding: 0;
-	border: 1px solid transparent;  
-  box-shadow: 0 0 30px black;
-  z-index: 1
+	border-bottom: 1px solid black;  
+	box-shadow: 0 0 10px black;
+	z-index: 10;
+	position: relative;
 }
 .menu-left {
 	display: inline-block;
@@ -59,6 +61,14 @@ body {
 	text-align: center;
 	color: #d8d8d8;
 }
+
+.pnk:hover {
+	padding-top: 4px;
+	color: #fce17e;
+	text-shadow: 1px 1px 2px black, 0 0 1em black;
+	border-bottom: 4px solid;
+}
+
 a {
 	color: inherit;
 	text-decoration: none;	
@@ -76,12 +86,6 @@ a:focus {
 	text-decoration: none;	
 }
 
-.pnk:hover {
-	padding-top: 4px;
-	color: #fce17e;
-	text-shadow: 1px 1px 2px black, 0 0 1em black;
-	border-bottom: 4px solid;
-}
 .brend {
 	display: inline-block;	
 	position: absolute;
@@ -104,28 +108,28 @@ a:focus {
 .soc img:hover {
 	padding-top: 4px;
 	border-radius: 18px;
-  border-bottom: solid 4px #fbdb65; 
+	border-bottom: solid 4px #fbdb65; 
 }
 .drop-menu{
-  position: absolute;
+	position: absolute;
 	left: 100px;
 	top: 80px;
 	border: 1px solid #d8d8d8;
-  background: #008499;
+	background: #008499;
 	font-family: 'Comfortaa', cursive;
 	font-size: 16px;    
 	text-transform: uppercase;
 	color: #d8d8d8;
 	box-shadow: 0 5px 20px black;
-	z-index: 2;
+	z-index: 15;
 }
 .drop-menu ul{
-  margin: 0;
-  padding: 0;
-  text-align: left;
+	margin: 0;
+	padding: 0;
+	text-align: left;
 	text-shadow: none;
 	width: 250px;
-  list-style: none;
+	list-style: none;
 }
 .drop-menu li {
 	display: block;
@@ -139,6 +143,7 @@ a:focus {
 }
 .drop-menu.dog-menu {
 	display: none;
+	z-index: 15;
 }
 .min-soc {
 	display: none;
@@ -149,22 +154,94 @@ a:focus {
 	color: #fbdb65;
 	text-shadow: 1px 1px 2px black, 0 0 1em black;	
 }
-.theme_dog	{
+.cor {
+	padding: 0;	
 	position: relative;
 	top:-10px;
-	z-index: 0;
+	z-index: 0;	
 }
-.husky {
+.cor .img{
+	position: relative;
+	z-index: 0;	
+}
 
-}
-	
 .husky_1	{
 	display: block;
 	position: absolute;
 	left: 47%;
-	top: 80px;
+	top: 18%;
+}
+.news-block {
+	margin-top: 20px;
+	border: 3px solid gold;
+	background: #454545;
+	text-align: center;
 
 }
-/*.pnk.dogs:hover .dog-menu{
+h1 {
+	font-family: 'Lobster', cursive;
+	color: gold;
+	margin-top: 10px;
+}
+.news-content p {
+	font-family: 'Comfortaa', cursive;
+	background: #fff;
+	margin: 0 0 10px;    
+	margin: 0px 20px;
+	position: relative;
+	z-index: 5;
+	margin-bottom: 20px;
+
+}
+.news-header	{
+	border: 1px solid #d8d8d8;
+	background: #a6a6a6;
 	display: block;
-}*/
+	margin: 0;
+	position: relative;
+	z-index: 10;
+	box-shadow: 0 0 30px black;
+}
+.news-date {
+	padding-top: 20px;
+}
+
+i.day {
+	font-size: 28px;    
+	line-height: 53px;
+}
+p.month {
+	text-transform: uppercase;
+	font-family: 'Comfortaa', cursive;
+	font-size: 20px;  
+}
+.news-name {
+	font-family: 'Lobster', cursive;
+	color: gold;
+}
+.content {
+	background: url(../svg/fon.svg) repeat;
+	border-bottom: 1px solid black;  
+	box-shadow: 0 0 30px black;
+	position: relative;
+	top: -10px;
+}
+.content-block {	
+	margin-top: 20px;
+	border: 3px solid gold;
+	background: #454545;
+	text-align: center;
+	margin-left: 20px;
+}
+.master {
+ 	display: block;
+ 	float: left; 
+ 	border: 2px solid #008499;
+ 	margin-right: 10px;
+}
+.cont p{
+	font-family: 'Comfortaa', cursive;
+	background: #fff;
+	margin-bottom: 20px;
+
+}
