--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,12 @@ body {
 	text-shadow: 1px 1px 2px black, 0 0 1em black;
 	border-bottom: 4px solid;
 }
-
+.pnk:active {
+	padding-top: 4px;
+	color: gold;
+	background: rgba(153, 153, 153, 0.47);
+	border-bottom: 4px solid;
+}
 a {
 	color: inherit;
 	text-decoration: none;	
@@ -85,6 +90,11 @@ a:focus {
 	color: #fbdb65;
 	text-decoration: none;	
 }
+a:active {
+	color: #fbdb65;
+	text-decoration: none;	
+}
+
 
 .brend {
 	display: inline-block;	
@@ -221,7 +231,6 @@ p.month {
 }
 .content {
 	background: url(../svg/fon.svg) repeat;
-	border-bottom: 1px solid black;  
 	box-shadow: 0 0 30px black;
 	position: relative;
 	top: -10px;
@@ -233,15 +242,33 @@ p.month {
 	text-align: center;
 	margin-left: 20px;
 }
-.master {
- 	display: block;
- 	float: left; 
- 	border: 2px solid #008499;
- 	margin-right: 10px;
+.images {
+	border: 1px solid #d8d8d8;
+	background: #a6a6a6;
+	display: block;
+	margin: 0;
+	padding: 10px;
+	position: relative;
+	box-shadow: 10px 10px 20px black;
+	float: left;
+	top: -10px;
+	left: -10px;
+
 }
 .cont p{
 	font-family: 'Comfortaa', cursive;
 	background: #fff;
 	margin-bottom: 20px;
-
+	text-align: left;
+}
+.footer	{
+	border-top: 3px solid #d8d8d8;
+	background: #454545;
+	position: relative;
+	top: -10px;
+	color: gold;
+}
+h3 {
+	font-family: 'Lobster', cursive;
+	color: gold;
 }
